--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -155,6 +155,7 @@ opacity-rule = [
     "100:name = 'Picture-in-Picture'",
     "100:name *= 'Netflix'",
     "100:class_g = 'discord'",
+    "100:class_g = 'Gimp'",
     "100:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'"
 ];
 
