--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -102,7 +102,7 @@ font-3 = -wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1:size=11;3
 font-4 = Noto Sans CJK JP:size=10;3
 modules-left = mpris mpris-prev mpris-play-pause mpris-next
 modules-center = filesystem screen kbd-backlight pulseaudio battery memory cpu temperature
-modules-right = wlan ipaddr
+modules-right = eth wlan ipaddr
 
 
 
@@ -344,6 +344,27 @@ ramp-signal-1 = 󰤢
 ramp-signal-2 = 󰤥
 ramp-signal-3 = 󰤨
 ramp-signal-foreground = ${colors.primary}
+
+[module/eth]
+type = internal/network
+click-left = /usr/bin/alacritty -e "/usr/bin/nmtui"
+interface-type = wired
+interface = enp0s13f0u1
+
+format-disconnected = <label-disconnected>
+format-disconnected-prefix = "󰣽 "
+format-disconnected-prefix-foreground = ${colors.disabled}
+label-disconnected = %ifname%
+
+format-connected = <ramp-signal> <label-connected>
+label-connected = %linkspeed%
+#ramp-signal-0 = 󰣾
+ramp-signal-0 = 󰣴
+ramp-signal-1 = 󰣶
+ramp-signal-2 = 󰣸
+ramp-signal-3 = 󰣺
+ramp-signal-foreground = ${colors.primary}
+
 
 [module/ipaddr]
 type = internal/network
