--- a/private_dot_config/flameshot/flameshot.ini
+++ b/private_dot_config/flameshot/flameshot.ini
@@ -2,10 +2,11 @@
 buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\x14\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\x13\0\0\0\x10\0\0\0\x14\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\x11\0\0\0\n\0\0\0\v\0\0\0\xe\0\0\0\xf\0\0\0\f\0\0\0\x12)
 contrastOpacity=188
 disabledTrayIcon=false
-drawColor=#0000ff
+drawColor=#ff0000
+drawFontSize=8
 drawThickness=3
 ignoreUpdateToVersion=12.1.0
-savePath=/home/botato/memes
+savePath=/home/botato/Pictures/memes
 savePathFixed=false
 setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
 showStartupLaunchMessage=true
