Update dot_bash/executable_env Update dot_ssr/private_settings.conf Update private_dot_config/alacritty/alacritty.yml Update private_dot_config/flameshot/flameshot.ini Update private_dot_config/i3/config Update private_dot_config/polybar/config.ini Update private_dot_config/private_VSCodium/User/settings.json Update private_dot_config/private_mimeapps.list

--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -91,8 +91,8 @@ bindsym $alt+t exec --no-startup-id "alacritty"
 bindsym $alt+m exec --no-startup-id "thunderbird"
 bindsym XF86Mail exec --no-startup-id "thunderbird"
 
-bindsym Print exec --no-startup-id "flameshot gui"
-bindsym $mod+Print exec --no-startup-id "flameshot gui -r | $HOME/scripts/flameshot-b2"
+bindsym Print exec --no-startup-id "flameshot gui -r | $HOME/scripts/flameshot-b2"
+bindsym $mod+Print exec --no-startup-id "flameshot gui -r"
 bindsym --release Insert exec --no-startup-id "xcolor -s"
 
 #bindsym $mod+l exec --no-startup-id "loginctl lock-session ${XDG_SESSION_ID-}"
