--- a/private_dot_config/flameshot/flameshot.ini
+++ b/private_dot_config/flameshot/flameshot.ini
@@ -1,17 +1,19 @@
 [General]
-buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\x14\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\x13\0\0\0\x10\0\0\0\x14\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\x11\0\0\0\n\0\0\0\v\0\0\0\xe\0\0\0\xf\0\0\0\f\0\0\0\x12)
-contrastOpacity=188
+buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\x18\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\x12\0\0\0\xf\0\0\0\x16\0\0\0\x13\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\x10\0\0\0\n\0\0\0\v\0\0\0\r\0\0\0\x17\0\0\0\xe\0\0\0\f\0\0\0\x11\0\0\0\x14\0\0\0\x15)
+contrastOpacity=191
+copyAndCloseAfterUpload=true
 disabledTrayIcon=false
 drawColor=#ff0000
 drawFontSize=8
 drawThickness=3
+fontFamily=Noto Color Emoji
 ignoreUpdateToVersion=12.1.0
 savePath=/home/botato/Pictures/memes
 savePathFixed=false
-setSaveAsFileExtension=Portable Network Graphic file (PNG) (*.png)
+showMagnifier=false
 showStartupLaunchMessage=true
 startupLaunch=true
-uploadCommand=/home/botato/scripts/flameshot-b2
+uploadWithoutConfirmation=true
 
 [Shortcuts]
 TYPE_ARROW=A
@@ -23,7 +25,6 @@ TYPE_DELETE_CURRENT_TOOL=Del
 TYPE_DRAWER=D
 TYPE_EXIT=Ctrl+Q
 TYPE_IMAGEUPLOADER=
-TYPE_IMGURUPLOADER=Return
 TYPE_MARKER=M
 TYPE_MOVESELECTION=Ctrl+M
 TYPE_MOVE_DOWN=Down
