--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -74,19 +74,9 @@ font-4 = Noto Sans CJK JP:size=10;1
 modules-left = i3
 modules-center =
 modules-right = xwindow date powermenu
-
 cursor-click = pointer
 cursor-scroll = ns-resize
-
 enable-ipc = true
-
-; tray-position = right
-
-; wm-restack = generic
-; wm-restack = bspwm
-wm-restack = i3
-
-; override-redirect = true
 
 
 [bar/bottom]
@@ -379,11 +369,7 @@ type = internal/network
 [module/date]
 type = internal/date
 interval = 1
-
-date = %{F#88c0d0}%{F-} %H:%M:%S
-date-alt = %{F#88c0d0} %{F-} %a, %B %d %{F#5e81ac}|%{F-} %d-%m-%Y
-
-
+date = %{F#88c0d0}%{F-} %b %d (%a) %I:%M%p
 label = %date%
 label-foreground = ${colors.primary}
 
