--- a/private_dot_config/private_VSCodium/User/settings.json
+++ b/private_dot_config/private_VSCodium/User/settings.json
@@ -23,4 +23,7 @@
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 }
