Update dot_bash/executable_aliases Update dot_bash/executable_env Update private_dot_config/flameshot/flameshot.ini Update private_dot_config/i3/config Update private_dot_config/picom/picom.conf Update private_dot_config/polybar/config.ini Update private_dot_config/private_mimeapps.list Update private_dot_mozilla/private_firefox/private_o90h44l8.default/private_user.js Update private_dot_mozilla/private_firefox/private_o90h44l8.default/user-overrides.js Update scripts/executable_flameshot-b2 Update scripts/executable_image-b2 Rename private_dot_mozilla/private_firefox/private_o90h44l8.default/executable_updater.sh to private_dot_mozilla/private_firefox/private_o90h44l8.default/private_executable_updater.sh

--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -278,7 +278,7 @@ click-right = pavucontrol
 
 [module/temperature]
 type = custom/script
-exec = sensors | grep Core |  awk '{s+=substr($3,2,length($3)-5)}END{print "%{F#bf616a}%{F-}",int(s/NR)"°C"}'
+exec = sensors | tail -n +15 | grep temp | awk '{s+=substr($2,length($3)-5)}END{print "%{F#bf616a}%{F-}",int(s/NR)"°C"}'
 interval = 1
 tail = true
 format = <label>
