--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -92,8 +92,8 @@ bindsym $alt+m exec --no-startup-id "thunderbird"
 bindsym XF86Mail exec --no-startup-id "thunderbird"
 
 bindsym Print exec --no-startup-id "flameshot gui -r | $HOME/scripts/flameshot-b2"
-bindsym $mod+Print exec --no-startup-id "flameshot gui -r"
-bindsym --release Insert exec --no-startup-id "xcolor -s"
+bindsym $mod+Print exec --no-startup-id "flameshot gui"
+bindsym --release Insert exec --no-startup-id "$HOME/.cargo/bin/xcolor -s"
 
 #bindsym $mod+l exec --no-startup-id "loginctl lock-session ${XDG_SESSION_ID-}"
 bindsym $mod+l exec --no-startup-id "$HOME/scripts/lock"
