--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -1,4 +1,28 @@
 #################################
+#             Corners           #
+#################################
+# requires: https://github.com/sdhand/compton
+corner-radius = 5.0;
+round-borders = 10.0;
+round-borders-exclude = [
+  #"class_g = 'TelegramDesktop'",
+];
+
+# Specify a list of border width rules, in the format `PIXELS:PATTERN`, 
+# Note we don't make any guarantee about possible conflicts with the
+# border_width set by the window manager.
+#
+# example:
+#    round-borders-rule = [ "2:class_g = 'URxvt'" ];
+#
+#round-borders-rule = [
+#  "3:class_g      = 'XTerm'",
+#  "3:class_g      = 'URxvt'",
+#  "5:class_g     = 'Alacritty'",
+#  "15:class_g     = 'Signal'"
+#];
+
+#################################
 #             Shadows           #
 #################################
 
