--- a/dot_ssr/private_settings.conf
+++ b/dot_ssr/private_settings.conf
@@ -19,15 +19,15 @@ video_area=fixed
 video_area_follow_fullscreen=false
 video_area_screen=1
 video_frame_rate=32
-video_h=489
+video_h=64
 video_record_cursor=true
 video_scale=false
 video_scaled_h=480
 video_scaled_w=854
 video_v4l2_device=/dev/video0
-video_w=945
-video_x=965
-video_y=46
+video_w=667
+video_x=2234
+video_y=833
 
 [output]
 add_timestamp=true
@@ -35,13 +35,13 @@ audio_codec=vorbis
 audio_codec_av=aac
 audio_kbit_rate=128
 audio_options=
-container=webm
+container=mp4
 container_av=3g2
-file=/home/botato/Videos/srr.webm
+file=/home/botato/Videos/testing.mp4
 profile=output
 separate_files=true
 video_allow_frame_skipping=true
-video_codec=vp8
+video_codec=h264
 video_codec_av=libx264
 video_h264_crf=23
 video_h264_preset=1
