--- a/private_dot_config/flameshot/flameshot.ini
+++ b/private_dot_config/flameshot/flameshot.ini
@@ -3,7 +3,7 @@ buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\x18\0\0\0\0\0\0\0\x1\0\0\0
 contrastOpacity=191
 copyAndCloseAfterUpload=true
 disabledTrayIcon=false
-drawColor=#ffff00
+drawColor=#800080
 drawFontSize=8
 drawThickness=3
 fontFamily=Noto Color Emoji
