--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -179,7 +179,9 @@ opacity-rule = [
     "100:name = 'Picture-in-Picture'",
     "100:name *= 'Netflix'",
     "100:class_g = 'discord'",
+    "100:class_g = 'firefox'",
     "100:class_g = 'Gimp'",
+    "100:class_g *= 'Minecraft'",
     "100:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'"
 ];
 
