Update dot_bash/executable_dot_bashrc Update executable_dot_bashrc Update private_dot_config/flameshot/flameshot.ini Update private_dot_config/i3/scripts/executable_prestartup Update private_dot_config/micro/buffers/history Update private_dot_config/private_mimeapps.list Update private_dot_config/watch_tablet.yml Remove private_dot_mozilla/private_firefox/private_o90h44l8.default/private_user.js Add private_dot_mozilla/private_firefox/private_o90h44l8.default/user.js Update scripts/executable_image-b2

--- a/private_dot_config/watch_tablet.yml
+++ b/private_dot_config/watch_tablet.yml
@@ -6,5 +6,6 @@ modes:
     - xinput enable "AT Translated Set 2 keyboard"
     - xinput enable "DLL0945:00 06CB:CE27 Touchpad"
   tablet:
+    - xinput --map-to-output "CUST0000:00 04F3:2ADF" "$(xrandr | grep 'eDP' | cut -d' ' -f1)"
     - xinput disable "AT Translated Set 2 keyboard"
     - xinput disable "DLL0945:00 06CB:CE27 Touchpad"
